# TTypeRestructured

./: ..gitignore.kate-swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Calculate.cpp  Makefile  Printer.cpp  Printer.h  README.md  TType.cpp  TType.h  TTypeRestructured  cmake_install.cmake  default.txt  longtext.txt  main.cpp  nCursesConfig.cpp  nCursesConfig.h
.cache/clangd/index/: Calculate.cpp.9944C5836BC69FB0.idx  Calculate.h.CFB36D08E6799F0E.idx  Printer.cpp.AC233E337DAEA92D.idx  Printer.h.E38ED53FBF531E3D.idx  TType.cpp.A11EDA24F9380AA7.idx  TType.h.1E67E4C02FE3AD97.idx  main.cpp.64B8DEC240C4AE77.idx  nCursesConfig.cpp.2289BC7646FBC58D.idx  nCursesConfig.h.8D06E389C0DCA228.idx
src/: Calculate.cpp  Calculate.h  Colours.h  Printer.cpp  Printer.h  TType.cpp  TType.h  fileSelector.cpp  main.cpp  nCursesConfig.cpp
src/include/: Printer.h  TType.h  fileSelector.h
text/: 1000words.txt  10words.txt  35.txt  TobyGrace.txt  default.txt  text.txt
